--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav a {
 }
 
 main {
-    max-width: 600px;
+    max-width: 1100px;
     margin-left: 150px;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -43,7 +43,7 @@ main {
 
 
 .main2 {
-    max-width: 600px;
+    max-width: 1100px;
     margin-top: 30px;
     margin-bottom: 30px;
     margin-left: 150px;
@@ -73,6 +73,12 @@ footer {
 }
 .head {
     text-align: center;
+}
+
+
+
+#logo{
+    
 }
 
 
