--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ footer {
     color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 8px; 
+    
 }
 .head {
     text-align: center;
@@ -77,8 +78,14 @@ footer {
 
 
 
-#logo{
-    
+.social{
+    text-decoration: none;
+    color: #fff;
+}
+
+
+.logo{
+    vertical-align: text-top;
 }
 
 
@@ -87,17 +94,4 @@ footer {
 #changingName{
     transition: color 0.8s ease;
 
-}
-.se{
-    color: #cde669
-    #db416d
-    #de9746
-    #b4e25e
-    #41a3db
-    #4150db
-    #8941db
-    #c71a59
-    #db41c9
-    #de3c6a
-    #000000
 }
